fix(profile): adjust search wrapper's z-index

--- a/profile/styles.css
+++ b/profile/styles.css
@@ -10,7 +10,7 @@
   padding: 1rem 1.5rem;
   position: sticky;
   top: 0;
-  z-index: 999;
+  z-index: 1;
 }
 
 .search {
